@@ -27,11 +27,13 @@ import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.invocation.InvocationOnMock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpStatus;
@@ -54,7 +56,9 @@ import uk.gov.gchq.palisade.service.data.model.DataRequest;
 import uk.gov.gchq.palisade.service.data.model.Token;
 import uk.gov.gchq.palisade.service.data.service.AuditableDataService;
 import uk.gov.gchq.palisade.service.data.stream.ProducerTopicConfiguration;
+import uk.gov.gchq.palisade.service.data.web.AkkaHttpServer;
 
+import java.io.OutputStream;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -78,15 +82,14 @@ import static uk.gov.gchq.palisade.contract.data.common.ContractTestData.AUDITAB
  */
 @SpringBootTest(
         classes = DataApplication.class,
-        webEnvironment = WebEnvironment.RANDOM_PORT,
-        properties = {"akka.discovery.config.services.kafka.from-config=false"}
+        webEnvironment = WebEnvironment.MOCK,
+        properties = {"akka.discovery.config.services.kafka.from-config=false", "server.port=0"}
 )
 @Import({KafkaTestConfiguration.class})
 @ActiveProfiles({"akka-test", "testcontainers"})
 class KafkaContractTest {
     public static final String READ_CHUNKED = "/read/chunked";
 
-    @Autowired
     private TestRestTemplate restTemplate;
     @MockBean
     private AuditableDataService serviceMock;
@@ -98,12 +101,17 @@ class KafkaContractTest {
     private Materializer akkaMaterializer;
     @Autowired
     private ProducerTopicConfiguration producerTopicConfiguration;
+    @Autowired
+    private AkkaHttpServer akkaHttpServer;
 
     @BeforeEach
     void setUp() {
+        var localAddress = akkaHttpServer.getServerBinding().join().localAddress();
+        var rootUri = "http://localhost:" + localAddress.getPort();
+        restTemplate = new TestRestTemplate(new RestTemplateBuilder().rootUri(rootUri));
+
         MappingJackson2HttpMessageConverter converter = new MappingJackson2HttpMessageConverter();
-        converter.setSupportedMediaTypes(
-                Arrays.asList(MediaType.APPLICATION_JSON, MediaType.APPLICATION_OCTET_STREAM));
+        converter.setSupportedMediaTypes(List.of(MediaType.APPLICATION_JSON, MediaType.APPLICATION_OCTET_STREAM));
         restTemplate.getRestTemplate().setMessageConverters(Arrays.asList(converter, new FormHttpMessageConverter()));
     }
 
@@ -133,8 +141,10 @@ class KafkaContractTest {
         HttpEntity<DataRequest> entity = new HttpEntity<>(ContractTestData.REQUEST_OBJ, new LinkedMultiValueMap<>(headers));
         ResponseEntity<Void> response = restTemplate.postForEntity(READ_CHUNKED, entity, Void.class);
 
-        // Then - the REST request was accepted
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
+        // Then - the REST request was accepted, and returned a FORBIDDEN
+        assertThat(response.getStatusCode())
+                .as("Check the response was FORBIDDEN as the client has no authorisation to read the data")
+                .isEqualTo(HttpStatus.FORBIDDEN);
         // When - results are pulled from the output stream
         Probe<ConsumerRecord<String, AuditErrorMessage>> resultSeq = errorProbe.request(1);
 
@@ -175,7 +185,11 @@ class KafkaContractTest {
                 .thenReturn(CompletableFuture.completedFuture(AUDITABLE_DATA_REQUEST));
 
         when(serviceMock.read(any(), any()))
-                .thenReturn(CompletableFuture.completedFuture(AUDITABLE_DATA_RESPONSE));
+                .then((InvocationOnMock invocation) -> {
+                    var os = invocation.getArgument(1, OutputStream.class);
+                    os.close();
+                    return CompletableFuture.completedFuture(AUDITABLE_DATA_RESPONSE);
+                });
 
         // Given - we are already listening to the service success output
         ConsumerSettings<String, AuditSuccessMessage> consumerSettings = ConsumerSettings
@@ -194,6 +208,7 @@ class KafkaContractTest {
 
         // Then - the REST request was accepted
         assertThat(response.getStatusCode())
+                .as("Check the response was OK as the client is authorised to read the data")
                 .isEqualTo(HttpStatus.OK);
         // When - results are pulled from the output stream
         Probe<ConsumerRecord<String, AuditSuccessMessage>> resultSeq = probe.request(1);
